# JniTest

./: .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt
src/main/cpp/src/: main.cpp
src/main/java/org/example/: NativeLibKt.kt
